--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>F1 Current Season</title>
     <link rel="stylesheet" href="spectre.min.css">
+    <link rel="icon" href="favicon.png" sizes="32x32">
+    <template id="races-row">
+        <tr>
+            <td class="text-right"></td>
+            <td class="text-clip"></td>
+            <td class="text-clip"></td>
+            <td class="text-clip"></td>
+        </tr>
+    </template>
 </head>
 <body>
 <div class="container grid-sm">
@@ -16,6 +25,19 @@
         </div>
     </div>
 
+    <table id="races" hidden class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th class="text-right">#</th>
+                <th>date</th>
+                <th>time</th>
+                <th>grand prix</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
 </div>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
