[*] Races, Grands Prix

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>F1 Current Season</title>
     <link rel="stylesheet" href="spectre.min.css">
-    <link rel="icon" href="favicon.png" sizes="32x32">
-    <template id="races-row">
+    <link rel="icon" href="favicon.png" sizes="32x32"/>
+    <link rel="icon" href="favicon.128.png" sizes="128x128"/>
+    <link rel="icon" href="favicon.192.png" sizes="192x192"/>
+    <link rel="apple-touch-icon" href="icon128.png"/>
+    <template id="races-template">
         <tr>
-            <td class="text-right"></td>
+            <td class="text-bold text-right"></td>
             <td class="text-clip"></td>
             <td class="text-clip"></td>
-            <td class="text-clip"></td>
+            <td class="text-clip"><a></a></td>
         </tr>
     </template>
 </head>
