--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="apple-touch-icon" href="icon128.png"/>
     <template id="races-template">
         <tr>
-            <td class="text-bold text-right"></td>
-            <td class="text-clip"></td>
-            <td class="text-clip"></td>
-            <td class="text-clip"><a></a></td>
+            <td class="col-auto text-bold text-right"></td>
+            <td class="col-auto text-clip col-auto"></td>
+            <td class="col-auto text-clip col-auto"></td>
+            <td class="text-clip"><a class="text-bold"></a></td>
         </tr>
     </template>
 </head>
@@ -23,22 +23,26 @@
 <div class="container grid-sm">
 
     <div class="columns">
-        <div class="column col-sm-12">
-            <h3>F1 Current Season</h3>
+        <div class="column col-sm-10 text-center">
+            <h3 class="text-bold">F1 Current Season</h3>
+
+            <table hidden id="races" class="table">
+                <thead>
+                    <tr>
+                        <th colspan="4" class="text-center text-large">Calendar</th>
+                    </tr>
+                    <tr>
+                        <th class="text-right">#</th>
+                        <th>date</th>
+                        <th>time</th>
+                        <th>grand prix</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+
         </div>
     </div>
-
-    <table id="races" hidden class="table table-striped table-hover">
-        <thead>
-            <tr>
-                <th class="text-right">#</th>
-                <th>date</th>
-                <th>time</th>
-                <th>grand prix</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
 
 </div>
 <script type="text/javascript" src="script.js"></script>
