--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <!-- Entries -->
+    <!-- Entrants -->
     <div class="columns">
         <div class="column col-sm-12">
 
