--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
         </div>
     </div>
 
+    <!-- DriverStandings -->
+    <div class="columns">
+        <div class="column col-sm-12">
+
+            <table hidden id="drivers" class="table">
+                <thead>
+                    <tr>
+                        <th colspan="3" class="text-center text-large">World Drivers' Championship</th>
+                    </tr>
+                    <tr>
+                        <th class="text-right">#</th>
+                        <th>driver</th>
+                        <th>points</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+
+        </div>
+
+    </div>
+
     <!-- ConstructorStandings -->
     <div class="columns">
         <div class="column col-sm-12">
