[*] Импорт пилотов (Drivers) на основе Entrants

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </template>
 </head>
 <body>
-<div class="container grid-sm">
+<div class="container grid-sm" style="max-width: 75rem">
     <!-- header -->
     <div class="columns">
         <div class="column col-sm-12 text-center">
