[*] History.pushState, Race

--- a/index.html
+++ b/index.html
@@ -52,6 +52,28 @@
         </div>
     </div>
 
+    <!-- Race -->
+    <div class="columns">
+        <div class="column col-sm-12 text-center">
+            <table hidden id="race" class="table">
+                <thead>
+                    <tr>
+                        <th class="text-center">
+                            <big class="text-large"></big>
+                            <br>
+                            <span></span>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="text-center"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <!-- Calendar -->
     <div class="columns">
         <div class="column col-12">
