--- a/index.html
+++ b/index.html
@@ -49,110 +49,85 @@
     <div class="columns">
         <div class="column col-sm-12 text-center">
             <h3 class="text-bold" style="white-space: nowrap">F1 Current Season</h3>
+            <div class="loading loading-lg"></div>
         </div>
     </div>
 
     <!-- Race -->
-    <div class="columns">
-        <div class="column col-sm-12 text-center">
-            <table hidden id="race" class="table">
-                <thead>
-                    <tr>
-                        <th class="text-center">
-                            <big class="text-large"></big>
-                            <br>
-                            <span></span>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="text-center"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <table hidden id="race" class="table">
+        <thead>
+            <tr>
+                <th class="text-center">
+                    <a href="javascript:void(null)" class="text-small">back to main page</a>
+                    <br><br>
+                    <big class="text-large"></big>
+                    <br>
+                    <span></span>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="text-center"></td>
+            </tr>
+        </tbody>
+    </table>
 
     <!-- Calendar -->
-    <div class="columns">
-        <div class="column col-12">
-
-            <table hidden id="races" class="table">
-                <thead>
-                    <tr>
-                        <th colspan="4" class="text-center text-large">Calendar</th>
-                    </tr>
-                    <tr>
-                        <th class="text-right">#</th>
-                        <th class="text-right">date</th>
-                        <th>time</th>
-                        <th>grand prix</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-
-        </div>
-    </div>
+    <table hidden id="races" class="table">
+        <thead>
+            <tr>
+                <th colspan="4" class="text-center text-large">Calendar</th>
+            </tr>
+            <tr>
+                <th class="text-right">#</th>
+                <th class="text-right">date</th>
+                <th>time</th>
+                <th>grand prix</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
     <!-- Entrants -->
-    <div class="columns">
-        <div class="column col-sm-12">
-
-            <table hidden id="entrants" class="table">
-                <thead>
-                    <tr>
-                        <th colspan="2" class="text-center text-large">Entries</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-
-        </div>
-    </div>
+    <table hidden id="entrants" class="table">
+        <thead>
+            <tr>
+                <th colspan="2" class="text-center text-large">Entries</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
     <!-- DriverStandings -->
-    <div class="columns">
-        <div class="column col-sm-12">
-
-            <table hidden id="drivers" class="table">
-                <thead>
-                    <tr>
-                        <th colspan="3" class="text-center text-large">World Drivers' Championship</th>
-                    </tr>
-                    <tr>
-                        <th class="text-right">#</th>
-                        <th>driver</th>
-                        <th>points</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-
-        </div>
-    </div>
+    <table hidden id="drivers" class="table">
+        <thead>
+            <tr>
+                <th colspan="3" class="text-center text-large">World Drivers' Championship</th>
+            </tr>
+            <tr>
+                <th class="text-right">#</th>
+                <th>driver</th>
+                <th>points</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
     <!-- ConstructorStandings -->
-    <div class="columns">
-        <div class="column col-sm-12">
-
-            <table hidden id="constructors" class="table">
-                <thead>
-                    <tr>
-                        <th colspan="3" class="text-center text-large">World Constructors' Championship</th>
-                    </tr>
-                    <tr>
-                        <th class="text-right">#</th>
-                        <th>constructor</th>
-                        <th>points</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-
-        </div>
-    </div>
+    <table hidden id="constructors" class="table">
+        <thead>
+            <tr>
+                <th colspan="3" class="text-center text-large">World Constructors' Championship</th>
+            </tr>
+            <tr>
+                <th class="text-right">#</th>
+                <th>constructor</th>
+                <th>points</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
 </div>
 <script type="text/javascript" src="script.js"></script>
