[+] Qualifyng Results (in progress)

--- a/index.html
+++ b/index.html
@@ -73,6 +73,120 @@
         </tbody>
     </table>
 
+    <!-- Sprint Qualifyng Results -->
+    <table hidden id="sprint-qualifying" class="table">
+        <thead>
+            <tr>
+                <th colspan="7" class="text-center text-large">Sprint Qualifyng Results</th>
+            </tr>
+            <tr>
+                <th colspan="7" class="text-center text-small"></th>
+            </tr>
+            <tr>
+                <th class="text-right">pos</th>
+                <th class="text-right">no</th>
+                <th>driver / constructor</th>
+                <th>q1</th>
+                <th>q2</th>
+                <th>q3</th>
+                <th class="text-right">+</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <!-- Sprint Starting Grid -->
+    <table hidden id="sprint-grid" class="table">
+        <thead>
+            <tr>
+                <th colspan="7" class="text-center text-large">Sprint Starting Grid</th>
+            </tr>
+            <tr>
+                <th class="text-right">pos</th>
+                <th class="text-right">no</th>
+                <th>driver</th>
+                <th>constructor</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <!-- Sprint Results -->
+    <table hidden id="sprint-results" class="table">
+        <thead>
+            <tr>
+                <th colspan="7" class="text-center text-large">Sprint Results</th>
+            </tr>
+            <tr>
+                <th colspan="7" class="text-center text-small"></th>
+            </tr>
+            <tr>
+                <th class="text-right">pos</th>
+                <th class="text-right">no</th>
+                <th>driver / constructor</th>
+                <th class="text-right">+</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <!-- Qualifyng Results -->
+    <table hidden id="race-qualifying" class="table">
+        <thead>
+            <tr>
+                <th colspan="7" class="text-center text-large">Qualifyng Results</th>
+            </tr>
+            <tr>
+                <th colspan="7" class="text-center text-small"></th>
+            </tr>
+            <tr>
+                <th class="text-right">pos</th>
+                <th class="text-right">no</th>
+                <th>driver / constructor</th>
+                <th>q1</th>
+                <th>q2</th>
+                <th>q3</th>
+                <th class="text-right">+</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <!-- Race Starting Grid -->
+    <table hidden id="race-grid" class="table">
+        <thead>
+            <tr>
+                <th colspan="7" class="text-center text-large">Starting Grid</th>
+            </tr>
+            <tr>
+                <th class="text-right">pos</th>
+                <th class="text-right">no</th>
+                <th>driver</th>
+                <th>constructor</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <!-- Race Results -->
+    <table hidden id="race-results" class="table">
+        <thead>
+            <tr>
+                <th colspan="7" class="text-center text-large">Race Results</th>
+            </tr>
+            <tr>
+                <th colspan="7" class="text-center text-small"></th>
+            </tr>
+            <tr>
+                <th class="text-right">pos</th>
+                <th class="text-right">no</th>
+                <th>driver / constructor</th>
+                <th class="text-right">+</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
     <!-- Calendar -->
     <table hidden id="races" class="table">
         <thead>
@@ -106,7 +220,7 @@
                 <th colspan="3" class="text-center text-large">World Drivers' Championship</th>
             </tr>
             <tr>
-                <th class="text-right">#</th>
+                <th class="text-right">pos</th>
                 <th>driver</th>
                 <th>points</th>
             </tr>
@@ -121,7 +235,7 @@
                 <th colspan="3" class="text-center text-large">World Constructors' Championship</th>
             </tr>
             <tr>
-                <th class="text-right">#</th>
+                <th class="text-right">pos</th>
                 <th>constructor</th>
                 <th>points</th>
             </tr>
