--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </template>
     <template id="races-template">
         <tr>
-            <td class="text-bold text-right"></td>
-            <td class="text-right" style="white-space: nowrap"></td>
-            <td style="white-space: nowrap"></td>
-            <td style="white-space: nowrap"><a class="text-bold"></a></td>
+            <td class="text-bold"></td>
+            <td class="text-right"></td>
+            <td></td>
+            <td><a class="text-bold"></a></td>
         </tr>
     </template>
     <template id="standings-template">
@@ -194,7 +194,7 @@
                 <th colspan="4" class="text-center text-large">Calendar</th>
             </tr>
             <tr>
-                <th class="text-right">#</th>
+                <th>#</th>
                 <th class="text-right">date</th>
                 <th>time</th>
                 <th>grand prix</th>
