[*] Предварительный вывод constructorsTable, driversTable, entrantsTable

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <link rel="apple-touch-icon" href="icon128.png"/>
     <template id="entrants-constructor-template">
         <tr>
-            <td class="text-bold text-center" style="white-space: nowrap" colspan="2"></td>
+            <td class="text-bold text-center" colspan="2"></td>
         </tr>
     </template>
     <template id="entrants-engine-template">
         <tr>
-            <td class="col-6 text-bold text-right" style="white-space: nowrap"></td>
-            <td class="col-6 text-bold" style="white-space: nowrap"></td>
+            <td class="col-6 text-bold text-right"></td>
+            <td class="col-6 text-bold"></td>
         </tr>
     </template>
     <template id="entrants-driver-template">
         <tr>
-            <td class="col-6 text-right" style="white-space: nowrap"></td>
-            <td class="col-6" style="white-space: nowrap"></td>
+            <td class="col-6 text-right"></td>
+            <td class="col-6"></td>
         </tr>
     </template>
     <template id="races-template">
@@ -38,7 +38,7 @@
     <template id="standings-template">
         <tr>
             <td class="text-bold text-right"></td>
-            <td style="white-space: nowrap"></td>
+            <td></td>
             <td class="text-bold"></td>
         </tr>
     </template>
