[*] Race page minor fixes

--- a/index.html
+++ b/index.html
@@ -89,23 +89,7 @@
                 <th>q1</th>
                 <th>q2</th>
                 <th>q3</th>
-                <th class="text-right">+</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <!-- Sprint Starting Grid -->
-    <table hidden id="sprint-grid" class="table">
-        <thead>
-            <tr>
-                <th colspan="7" class="text-center text-large">Sprint Starting Grid</th>
-            </tr>
-            <tr>
-                <th class="text-right">pos</th>
-                <th class="text-right">no</th>
-                <th>driver</th>
-                <th>constructor</th>
+                <th class="text-right">gap</th>
             </tr>
         </thead>
         <tbody></tbody>
@@ -115,16 +99,18 @@
     <table hidden id="sprint-results" class="table">
         <thead>
             <tr>
-                <th colspan="7" class="text-center text-large">Sprint Results</th>
+                <th colspan="6" class="text-center text-large">Sprint Results</th>
             </tr>
             <tr>
-                <th colspan="7" class="text-center text-small"></th>
+                <th colspan="6" class="text-center text-small"></th>
             </tr>
             <tr>
                 <th class="text-right">pos</th>
                 <th class="text-right">no</th>
                 <th>driver / constructor</th>
-                <th class="text-right">+</th>
+                <th class="text-right">laps</th>
+                <th class="text-right">time</th>
+                <th class="text-right">ponts</th>
             </tr>
         </thead>
         <tbody></tbody>
@@ -146,23 +132,7 @@
                 <th>q1</th>
                 <th>q2</th>
                 <th>q3</th>
-                <th class="text-right">+</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <!-- Race Starting Grid -->
-    <table hidden id="race-grid" class="table">
-        <thead>
-            <tr>
-                <th colspan="7" class="text-center text-large">Starting Grid</th>
-            </tr>
-            <tr>
-                <th class="text-right">pos</th>
-                <th class="text-right">no</th>
-                <th>driver</th>
-                <th>constructor</th>
+                <th class="text-right">gap</th>
             </tr>
         </thead>
         <tbody></tbody>
@@ -172,22 +142,22 @@
     <table hidden id="race-results" class="table">
         <thead>
             <tr>
-                <th colspan="7" class="text-center text-large">Race Results</th>
+                <th colspan="6" class="text-center text-large">Race Results</th>
             </tr>
             <tr>
-                <th colspan="7" class="text-center text-small"></th>
+                <th colspan="6" class="text-center text-small"></th>
             </tr>
             <tr>
                 <th class="text-right">pos</th>
                 <th class="text-right">no</th>
                 <th>driver / constructor</th>
-                <th class="text-right">+</th>
+                <th class="text-right">time</th>
             </tr>
         </thead>
         <tbody></tbody>
     </table>
 
-    <!-- Calendar -->
+    <!-- Races -->
     <table hidden id="races" class="table">
         <thead>
             <tr>
