[**] Race page minor fixes

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     <table hidden id="sprint-results" class="table">
         <thead>
             <tr>
-                <th colspan="6" class="text-center text-large">Sprint Results</th>
+                <th colspan="7" class="text-center text-large">Sprint Results</th>
             </tr>
             <tr>
-                <th colspan="6" class="text-center text-small"></th>
+                <th colspan="7" class="text-center text-small"></th>
             </tr>
             <tr>
                 <th class="text-right">pos</th>
@@ -110,7 +110,8 @@
                 <th>driver / constructor</th>
                 <th class="text-right">laps</th>
                 <th class="text-right">time</th>
-                <th class="text-right">ponts</th>
+                <th class="text-right">points</th>
+                <th class="text-right">start</th>
             </tr>
         </thead>
         <tbody></tbody>
@@ -142,16 +143,19 @@
     <table hidden id="race-results" class="table">
         <thead>
             <tr>
-                <th colspan="6" class="text-center text-large">Race Results</th>
+                <th colspan="7" class="text-center text-large">Race Results</th>
             </tr>
             <tr>
-                <th colspan="6" class="text-center text-small"></th>
+                <th colspan="7" class="text-center text-small"></th>
             </tr>
             <tr>
                 <th class="text-right">pos</th>
                 <th class="text-right">no</th>
                 <th>driver / constructor</th>
+                <th class="text-right">laps</th>
                 <th class="text-right">time</th>
+                <th class="text-right">points</th>
+                <th class="text-right">start</th>
             </tr>
         </thead>
         <tbody></tbody>
