--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
         <tbody></tbody>
     </table>
 
+    <div class="columns">
+        <div class="column col-sm-12 text-center">
+            <a href="https://github.com/andybe29/f1.current.season">GitHub</a> | <a href="https://github.com/f1db/f1db" class="tooltip" data-tooltip="Open Source Formula 1 Database">F1DB</a> | <a href="https://picturepan2.github.io/spectre/" class="tooltip" data-tooltip="a Lightweight, Responsive and Modern CSS Framework">Spectre.css</a>
+        </div>
+    </div>
 </div>
 <script type="text/javascript" src="script.js"></script>
 </body>
